--- a/templates/base.html
+++ b/templates/base.html
@@ -66,7 +66,7 @@
     </style>
 </head>
 
-<body>
+<body  class="open">
     <!-- Left Panel -->
     <aside id="left-panel" class="left-panel">
         <nav class="navbar navbar-expand-sm navbar-default">
